--- a/package.json
+++ b/package.json
@@ -19,9 +19,24 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
-    "rxjs": "~6.4.0",
+    "@coreui/coreui": "^2.1.12",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+    "@coreui/icons": "0.3.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "core-js": "^3.1.4",
+    "flag-icon-css": "^3.3.0",
+    "font-awesome": "~4.7.0",
+    "jquery": "^3.4.1",
+    "pace-progress": "1.0.2",
+    "perfect-scrollbar": "^1.4.0",
+    "popper.js": "^1.15.0",
+    "regenerator-runtime": "^0.13.2",
+    "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
@@ -42,6 +57,35 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/preset-env": "^7.5.4",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.2",
+    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
+    "browser-sync": "^2.26.7",
+    "chalk": "^2.4.2",
+    "clean-css-cli": "^4.3.0",
+    "copyfiles": "^2.1.1",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-compat": "^3.2.0",
+    "foreach-cli": "^1.8.1",
+    "js-beautify": "^1.10.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.3",
+    "pug": "^2.0.4",
+    "rimraf": "^2.6.3",
+    "shelljs": "^0.8.3",
+    "stylelint": "^10.1.0",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-order": "^3.0.1",
+    "stylelint-scss": "^3.9.1"
   }
 }
